--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -25,6 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "lint": "npx eslint src/**/*.tsx src/**/*.ts --fix",
     "json-server": "npx json-server db.json --port 5983"
   },
   "eslintConfig": {
@@ -47,6 +47,10 @@
   },
   "devDependencies": {
     "@types/react-modal": "^3.13.1",
-    "json-server": "^0.17.0"
+    "eslint": "^8.23.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react": "^7.31.7",
+    "json-server": "^0.17.0",
+    "typescript": "^4.8.2"
   }
 }
