--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.11.57",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "maplibre-gl": "^1.15.3",
     "material-icons": "^1.11.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/geojson": "^7946.0.10",
     "@types/react-modal": "^3.13.1",
     "eslint": "^8.23.0",
     "eslint-config-react-app": "^7.0.1",
