--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.11.57",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
     "maplibre-gl": "^1.15.3",
     "material-icons": "^1.11.11",
     "react": "^18.2.0",
