--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.31.7",
     "json-server": "^0.17.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.10",
     "typescript": "^4.8.2"
   }
